# fastapi_tutorial

./: .gitignore  background_tasks.py  body.py  body_updates.py  data.py  dependencies.py  form_data.py  handling_errors.py  json_compat_encoder.py  main.py  main_b.py  metadata.py  middleware.py  models.py  path_operation_config.py  path_parameters_and_numeric_validations.py  pyproject.toml  request_files.py  security.py  sql_app.db  status_code.py  test_main.py  test_main_b.py
app/: main.py
app/internal/: admin.py
app/routers/: items.py
sql_app/: database.py.8518dc7832ca370f0d676622f49ba056.tmp  main.py  models.py.bc795e6ba2acabbe37e2edba2588adc3.tmp
