[tool.poetry]
name = "fastapi_tutorial"
version = "0.1.0"
description = ""
authors = ["Connie <conniecanelon97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
pydantic = {extras = ["email"], version = "^1.8.2"}
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
SQLAlchemy = "^1.4.22"
aiofiles = "^0.7.0"
pytest = "^6.2.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
